JumpScript/tests/baselines/reference/YieldExpression8_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression8_es6.jump(1,1): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression8_es6.jump (1 errors) ====
    yield(foo);
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    function* foo() {
      yield(foo);
    }